bridges/jac-bridge/tests/ui/wide_missing_serde.stderr
error[E0277]: the trait bound `Plain: serde::Serialize` is not satisfied
 --> tests/ui/wide_missing_serde.rs:3:1
  |
3 | #[bridge(module = "m")]
  | ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `Plain`
 --> tests/ui/wide_missing_serde.rs:9:5
  |
9 |     pub struct Plain {
  |     ^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Plain` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required for `Wide<Plain>` to implement `Serialize`
 --> tests/ui/wide_missing_serde.rs:3:1
  |
3 | #[bridge(module = "m")]
  | ^^^^^^^^^^^^^^^^^^^^^^^ type parameter would need to implement `Serialize`
  = help: consider manually implementing `Serialize` to avoid undesired bounds
note: required by a bound in `wide_encode`
 --> tests/ui/wide_missing_serde.rs:3:1
  |
3 | #[bridge(module = "m")]
  | ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `wide_encode`
  = note: this error originates in the attribute macro `bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
